Bug 1361116 - Ensure that string data is sent to the pasteboard when requested by macOS services. r=mstange, a=jcristau

--HG--
extra : source : df442f1c10332426528aab20ea59d29682183939